time/src/main/kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: time
  labels:
    app: time    
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: time
