time/src/main/kubernetes/VirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: time-gateway
  namespace: tutorial
spec:
  gateways:
  - java-cloud-native-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /time
    rewrite:
      uri: /time
    route:
    - destination:
        host: time
        port:
          number: 8080
